rename endpoint customer
