# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "localhost:8888",
     "basePath": "/api",
     "paths": {
-        "/api/v1/customer/login": {
+        "/api/v1/customers/login": {
             "post": {
                 "description": "Login Customer",
                 "consumes": [
@@ -90,7 +90,7 @@
                 }
             }
         },
-        "/api/v1/customer/refresh-token": {
+        "/api/v1/customers/refresh-token": {
             "post": {
                 "description": "Refresh Token Customer",
                 "consumes": [
@@ -163,7 +163,7 @@
                 }
             }
         },
-        "/api/v1/customer/register": {
+        "/api/v1/customers/register": {
             "post": {
                 "description": "Register Customer",
                 "consumes": [
